# asapo

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE-CREDITS-3RD-PARTY.txt  LICENSE.txt  PROTOCOL-VERSIONS.md  README.md  VERSIONS.md  dev-setup-notes.txt  doxygen.ini
authorizer/: CMakeLists.txt
authorizer/docker/: Dockerfile
authorizer/src/asapo_authorizer/: go.mod  go.sum
broker/: CMakeLists.txt
broker/docker/: Dockerfile
broker/src/asapo_broker/: go.mod  go.sum
broker/src/main/: broker.go
broker/src/test/: test.go  test_test.go
broker/src/test2/: test.go  test_test.go
common/cpp/: CMakeLists.txt  README.md
common/cpp/scripts/: replace_mocks.py  test.h
common/cpp/src/: has_io.cpp  io_utils.cpp  system_io.cpp  system_io_linux.cpp  system_io_windows.cpp
common/cpp/unittests/: MockIO.h  test_common.cpp
consumer/: CMakeLists.txt  libasapo-consumer.pc.in
consumer/api/cpp/: CMakeLists.txt  consumer.spec.in
consumer/api/python/: CMakeLists_Linux.cmake  CMakeLists_Windows.cmake  asapo_consumer.pxd  asapo_consumer.pyx.in  asapo_wrappers.h  cythonize.py  setup.py.in
consumer/tools/folder_to_db/: CMakeLists.txt
deploy/: CMakeLists.txt  README.md  _docker_vars.sh
deploy/asapo/: Dockerfile  asap3.tfvars  asapo-wait-service  build_image.sh  copy_asap3.sh.in
deploy/asapo/scripts/: asapo-brokers.nmd.tpl  asapo-mongo.nmd.tpl  asapo-perfmetrics.nmd.tpl  asapo-receivers.nmd.tpl  asapo-services.nmd.tpl  asapo.auto.tfvars.in  authorizer.json.tpl  discovery.json.tpl  kibana.yml
deploy/asapo_client_template/: Dockerfile  asapo_client_overwrite_vars.tfvars  build_image.sh  run.sh  run_maxwell.sh
deploy/asapo_client_template/scripts/: job.auto.tfvars  job_resources.tf  job_templates.tf  job_vars.tf  stress_cpu.nmd.tpl  stress_memory.nmd.tpl
deploy/asapo_clients/: Dockerfile  asapo_client_overwrite_vars.tfvars  build_image.sh  run.sh  run_maxwell.sh
deploy/asapo_clients/scripts/: asapo.auto.tfvars  grafana.nmd.tpl  nginx.conf.tpl  provider.tf  resources.tf  telegraf.conf.tpl  templates.tf  vars.tf
deploy/asapo_helm_chart/asapo/: Chart.yaml  values.yaml
deploy/asapo_orchestration_docker/: Dockerfile  Dockerfile.template  build_image.sh
deploy/asapo_orchestration_docker/scripts/: asapo.auto.tfvars  fluent-bit-cluster-custom-parsers.conf  fluent-bit-cluster.conf.tpl  fluent-bit-nginx.conf.tpl  monitoring.nmd.tpl  nginx.conf.tpl  nginx.nmd.tpl  resources.tf  resources_services.tf  telegraf.conf.tpl  templates.tf  vars.tf
deploy/asapo_services/: Dockerfile  Dockerfile.in  Dockerfile.template  asap3.tfvars  asapo_overwrite_vars.tfvars  build_image.sh  copy_asap3.sh.in  job.sh  local.tfvars  run.sh  run_maxwell.sh
deploy/asapo_services/scripts/: alert.yml.tpl  vars.tf  (+25 more)
deploy/nomad_consul/: CMakeLists.txt
deploy/nomad_consul_docker/: Dockerfile  asapo-wait-service  build_image.sh  consul.hcl.tpl  jobs-start  jobs-stop  nomad.hcl.tpl  orchestr_config.py  run.sh  supervisord.conf
deploy/nomad_consul_package/: CMakeLists.txt  make_package
deploy/nomad_jobs/: asapo-brokers.nmd.in  asapo-logging.nmd.in  asapo-mongo-sharded.nmd.in  asapo-mongo.nmd.in  asapo-nginx.nmd.in  asapo-perfmetrics.nmd.in  asapo-receivers.nmd.in  asapo-services.nmd.in  asapo-test.nmd  asapo-test.nomad  authorizer.json.tpl  broker.json.tpl  copy.sh.in  discovery.json.tpl  fluentd.conf  init_influx.sh  init_mongo.sh  kibana.yml  mongo-configsrv.yaml.tpl  mongo-mongos.yaml.tpl  mongo-shardsrv.yaml.tpl  nginx.conf.tpl  receiver.json.tpl  start_asapo.sh  stop_asapo.sh
discovery/: CMakeLists.txt
discovery/docker/: Dockerfile
install/: CMakeLists.txt
install/cmake/: AsapoConfig.cmake
producer/: CMakeLists.txt  libasapo-producer.pc.in
producer/api/: CMakeLists.txt  README.md
producer/dummy-event-detector-cpp/: CMakeLists.txt
producer/event_monitor_producer/: CMakeLists.txt
producer/folder_monitor_producer/: CMakeLists.txt
producer/inotify-event-detector-cpp/: CMakeLists.txt
receiver/: CMakeLists.txt  README.md
receiver/docker/: Dockerfile  install_libfabric.sh  install_rdkafka.sh
receiver/src/: connection.cpp  connection.h  connection_authorizer.cpp  connection_authorizer.h  data_cache.cpp  data_cache.h  file_processor.cpp  file_reference_handler.cpp  file_refernce_handler.cpp  file_refernce_handler.h  main.cpp  main.cpp.cpp  network_producer_peer.cpp  network_producer_peer.h  network_producer_peer_handlers.cpp  network_producer_peer_impl.cpp  network_producer_peer_impl.h  network_producer_peer_impl_functions.cpp  network_producer_peer_impl_handlers.cpp  receive_file_processor.cpp  receive_file_processor.h  receiver.cpp  receiver.h  receiver_config.cpp  receiver_config.h  receiver_config_factory.h  receiver_error.h  receiver_logger.cpp  receiver_logger.h  receiver_statistics.h  request.cpp  request.h  request_factory.cpp  request_factory.h  request_handler.cpp  request_handler.h  request_handler_authorize.cpp  request_handler_authorize.h  request_handler_db.cpp  request_handler_db.h  (+25 more)
receiver/unittests/: mock_receiver_config.cpp  mock_receiver_config.h  mock_statistics.h  receiver_mocking.h  test_authorizer.cpp  test_config.cpp  test_connection.cpp  test_datacache.cpp  test_file_reference_handler.cpp  test_network_producer_peer.cpp  test_network_producer_peer_impl.cpp  test_receive_file_processor.cpp  test_receiver.cpp  test_receiver_statistics.cpp  test_request.cpp  test_request_factory.cpp  test_request_handler_authorizer.cpp  test_request_handler_db.cpp  test_request_handler_db_check_request.cpp  test_request_handler_db_meta_writer.cpp  test_request_handler_db_writer.cpp  test_request_handler_file_process.cpp  test_request_handler_file_receive.cpp  test_request_handler_file_write.cpp  test_request_handler_receive_data.cpp  test_request_handler_receive_metadata.cpp  test_requests_dispatcher.cpp  test_statistics.cpp  test_statistics_sender_fluentd.cpp  test_statistics_sender_influx_db.cpp  test_write_file_processor.cpp
receiver/unittests_OLD/: test_receiver.cpp
tests/system_io/: CMakeLists.txt  cleanup.sh  read_folder_content.cpp
(+1960 files in other folders)
